--- a/style.css
+++ b/style.css
@@ -34,6 +34,9 @@ main {
 .img1 {
     height: 300px;
     width: 300px;
+    position: relative;
+    z-index: 10;
+    filter: brightness(0%);
 }
 
 .Description{
