--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ a li {
 #searchBar {
     outline-color: rgb(255, 60, 0);
     border-radius: 10px;
-    font-size: 23px;
+    font-size: 20px;
+    max-width: 250px;
     color: black !important;
 }
 
@@ -55,13 +56,13 @@ a li {
 #weatherResult {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 5px;
 }
 
 #weatherResult div {
-    padding: 10px;
-    border: 2px solid black;
-    font-size: 16px;
+    padding: 5px;
+    border: 2px solid rgb(132, 132, 132);
+    font-size: 15px;
     border-radius: 10px;
 }
 
