--- a/utility.css
+++ b/utility.css
@@ -113,8 +113,16 @@
 }
 
 .w-180{
-    width: 180px !important;
+    width: fit-content !important;
     
+}
+
+.gap-30{
+    gap: 30px;
+}
+
+.gap-10{
+    gap: 10px;
 }
 
 .text-green{
@@ -134,7 +142,7 @@
 }
 
 .border{
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(136, 136, 136);
     padding: 10px;
     border-radius: 10px;
     background-image: linear-gradient( black, transparent);
