--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    color:#ffffff ;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+    color: #ffffff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
 }
 
 a {
@@ -28,13 +28,23 @@ a li {
 }
 
 .img1 {
-   width: 150px;
-   height: 150px;
-   margin: 10px;
-   border-radius: 20px;
-   box-shadow: 1px 1px 10px 1px rgb(40, 40, 40);
-   filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.3));
-   background-color: rgb(155, 230, 255);
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+    border-radius: 20px;
+    box-shadow: 1px 1px 10px 1px rgb(40, 40, 40);
+    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.3));
+    background-color: rgb(155, 230, 255);
+}
+
+.img2 {
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    border-radius: 20px;
+    box-shadow: 1px 1px 10px 1px rgb(40, 40, 40);
+    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.3));
+    background-color: rgb(155, 230, 255);
 }
 
 .Description {
@@ -56,13 +66,13 @@ a li {
 #weatherResult {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 15px;
 }
 
 #weatherResult div {
-    padding: 5px;
+    padding: 15px;
     border: 2px solid rgb(132, 132, 132);
-    font-size: 15px;
+    font-size: 18px;
     border-radius: 10px;
 }
 
@@ -82,7 +92,7 @@ a li {
     z-index: -1;
 }
 
-.bg-img{
+.bg-img {
     width: 100%;
     height: 100%;
 }
