--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
 * {
     margin: 0;
     padding: 0;
-    color: #ffffff;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    color: #F8F9FA;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background: #399494;
+}
+
+nav{
+    background-color: #3333333b;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.491);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 
 a {
@@ -14,7 +25,7 @@ a li {
 }
 
 #searchBar {
-    outline-color: rgb(255, 60, 0);
+    outline-color: #333333;
     border-radius: 10px;
     font-size: 20px;
     max-width: 250px;
@@ -22,7 +33,8 @@ a li {
 }
 
 #searchBtn {
-    border-color: rgb(255, 72, 0);
+    border-color: #333333;
+    background: #333333;
     border-radius: 10px;
     font-size: 23px;
 }
@@ -32,31 +44,12 @@ a li {
     height: 150px;
     margin: 10px;
     border-radius: 20px;
-    box-shadow: 1px 1px 10px 1px rgb(40, 40, 40);
-    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.3));
-    background-color: rgb(155, 230, 255);
-}
-
-.img2 {
-    width: 100px;
-    height: 100px;
-    margin: 10px;
-    border-radius: 20px;
-    box-shadow: 1px 1px 10px 1px rgb(40, 40, 40);
-    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.3));
-    background-color: rgb(155, 230, 255);
-}
-
-.Description {
-    background-color: yellow;
+    background:#4A6FA5;
 }
 
 .ForecastHub {
-    background-image: linear-gradient(123deg, rgb(214, 50, 50), rgb(207, 151, 45), rgb(39, 194, 39), rgb(57, 57, 195));
-    -webkit-text-stroke-width: thin;
-    font-size: 27px;
+    font-size: 30px;
     border-radius: 10px;
-    padding: 5px;
 }
 
 .weather-item {
@@ -95,4 +88,13 @@ a li {
 .bg-img {
     width: 100%;
     height: 100%;
+    opacity: 0.9;
+}
+
+
+.border{
+    border: 1px solid rgb(136, 136, 136);
+    padding: 10px;
+    border-radius: 10px;
+   background:linear-gradient(135deg, #4A6FA5, #1E3C72);
 }
