--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: #399494;
+    background: #185a5a;
 }
 
 nav{
@@ -71,30 +71,4 @@ a li {
 
 .block {
     display: block;
-}
-
-.bgImg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-repeat: repeat;
-    z-index: -1;
-}
-
-.bg-img {
-    width: 100%;
-    height: 100%;
-    opacity: 0.9;
-}
-
-
-.border{
-    border: 1px solid rgb(136, 136, 136);
-    padding: 10px;
-    border-radius: 10px;
-   background:linear-gradient(135deg, #4A6FA5, #1E3C72);
 }
